@@ -164,8 +164,9 @@ via <a href="http://www.gnuplot.info/">gnuplot</a> version 4.6.
 <ol>
 <li>Read the User Manual and Reference (this file).
 <li>
-<a href="http://sourceforge.net/project/platformdownload.php?group_id=221386">
-Download</a> Frame3DD and save the Frame3DD folder to your Desktop (more details below).
+<!-- a href="http://sourceforge.net/project/platformdownload.php?group_id=221386" -->
+<a href="https://sourceforge.net/projects/frame3dd/files/frame3dd/">Download</a>
+Frame3DD and save the Frame3DD folder to your Desktop (more details below).
 <li>Optionally, obtain a copy of gnuplot for your operating system (more details below).
 <li>Open a terminal window, go to the Frame3DD directory, and run the program on one of the examples using a command like ...
 <pre>
@@ -295,8 +296,9 @@ The following instructions install Frame3DD to the <b>Desktop</b> but other dire
 
 <ol>
 <li>
-<a href="http://sourceforge.net/project/platformdownload.php?group_id=221386">
-Download</a> the Frame3DD .ZIP archive (Frame3DD_VERSION_linux.zip) and save it in your <b>Desktop</b>.<br>
+<a href="https://sourceforge.net/projects/frame3dd/files/frame3dd/">Download</a>
+<!-- a href="http://sourceforge.net/project/platformdownload.php?group_id=221386" -->
+the Frame3DD .ZIP archive (Frame3DD_VERSION_linux.zip) and save it in your <b>Desktop</b>.<br>
 If the .ZIP archive was not automatically unzipped, 
 double-click the icon to extract it to your <b>Desktop</b>. 
 <li>
@@ -447,8 +449,9 @@ There are two options for compiling under Linux:
 <ol> 
 <li> Compiling using <b>make</b>.
 <ol>
-<li><a href="https://sourceforge.net/projects/frame3dd/files/">
-Download</a> the Frame3DD source-code zip-file (frame3dd_VERSION_src.zip)
+<li>
+<a href="https://sourceforge.net/projects/frame3dd/files/frame3dd/">Download</a>
+the Frame3DD source-code zip-file (frame3dd_VERSION_src.zip)
 and save it in your home directory.<br>
 If the .ZIP archive was not automatically unzipped, 
 double-click the icon to extract it to your <b>Desktop</b>. 
@@ -474,8 +477,8 @@ sudo apt-get install build-essential scons
 sudo apt-get install libsoqt-dev4
 </pre>
 <!-- http://sourceforge.net/project/platformdownload.php?group_id=221386" -->
-<li><a href="https://sourceforge.net/projects/frame3dd/files/">
-Download</a> the Frame3DD source-code tarball (frame3dd-VERSION.tar.bz2)
+<li><a href="https://sourceforge.net/projects/frame3dd/files/frame3dd/">Download</a>
+the Frame3DD source-code tarball (frame3dd-VERSION.tar.bz2)
 and save it in your home directory.
 
 <li>Open a Terminal, unpack the source code, enter the source directory,
@@ -521,8 +524,10 @@ The following instructions install Frame3DD to the <b>Desktop</b> but other dire
 <h4> 3.2.1 Installing Frame3DD from the .ZIP archive for OS X</h4>
 
 <ol>
-<li> <a href="http://sourceforge.net/project/platformdownload.php?group_id=221386">
-Download</a> the Frame3DD .ZIP archive (Frame3DD_VERSION_osx.zip) and save it in your <b>Desktop</b>.<br>
+<li>
+<!-- a href="http://sourceforge.net/project/platformdownload.php?group_id=221386" -->
+<li><a href="https://sourceforge.net/projects/frame3dd/files/frame3dd/">Download</a>
+the Frame3DD .ZIP archive (Frame3DD_VERSION_osx.zip) and save it in your <b>Desktop</b>.<br>
 If the .ZIP archive was not automatically unzipped, 
 simply drag the <b>Frame3DD</b> folder icon to your <b>Desktop</b>. 
 <li><b><i>Optional</i></b><br>
@@ -681,7 +686,7 @@ and animations until the <b>gnuplot></b> prompt returns.
 
 <ol>
 <li>Install <a href="https://developer.apple.com/xcode/">Xcode</a>.
-<li><a href="https://sourceforge.net/projects/frame3dd/files/">Download</a>
+<li><a href="https://sourceforge.net/projects/frame3dd/files/frame3dd/">Download</a>
 the Frame3DD source-code zip file (frame3dd_VERSION_src.zip)
 and save it in your home directory.<br>
 If the .ZIP archive was not automatically unzipped, 
@@ -708,8 +713,10 @@ The following instructions install Frame3DD to the <b>Desktop</b> but other dire
 <h4> 3.3.1 Installing Frame3DD from the .ZIP archive for Windows</h4>
 
 <ol>
-<li> <a href="http://sourceforge.net/project/platformdownload.php?group_id=221386">
-Download</a> the Frame3DD .ZIP archive (Frame3DD_VERSION_win32.zip) and save it to your <b>Desktop</b>.<br>
+<li>
+<!-- a href="http://sourceforge.net/project/platformdownload.php?group_id=221386" -->
+<a href="https://sourceforge.net/projects/frame3dd/files/frame3dd/">Download</a>
+the Frame3DD .ZIP archive (Frame3DD_VERSION_win32.zip) and save it to your <b>Desktop</b>.<br>
 If the .ZIP archive was not automatically unzipped, 
 simply drag <b>Frame3DD</b> folder icon to your <b>Desktop</b>. 
 <li><b><i>Optional</i></b><br>
